Nautilus 3.30 starts very slowly, and I see error messages running Nautilus from the terminal
Hi! Thank you very much for your work. But Nautilus starts very slowly, and I see error messages it the terminal output running Nautilus from the terminal. I using Arch Linux, GNOME 3.30 and Nautilus 3.30 git nautilus@4d935a89
It looks like this:
$ nautilus
** (nautilus:880): WARNING **: 21:03:35.706: Error on getting connection: Failed to load SPARQL backend: GDBus.Error:org.freedesktop.DBus.Error.NoReply: Message recipient disconnected from message bus without replying
(nautilus:880): GLib-GIO-CRITICAL **: 21:03:37.077: g_dbus_connection_signal_unsubscribe: assertion 'G_IS_DBUS_CONNECTION (connection)' failed
(nautilus:880): GLib-GObject-CRITICAL **: 21:03:37.077: g_object_unref: assertion 'G_IS_OBJECT (object)' failed
(nautilus:880): GLib-GObject-CRITICAL **: 21:03:37.077: g_object_unref: assertion 'G_IS_OBJECT (object)' failed
(nautilus:880): GLib-GObject-WARNING **: 21:03:37.077: invalid (NULL) pointer instance
(nautilus:880): GLib-GObject-CRITICAL **: 21:03:37.078: g_signal_connect_data: assertion 'G_TYPE_CHECK_INSTANCE (instance)' failed