src/nautilus-tag-manager.c
@@ -875,11 +875,13 @@ nautilus_tag_manager_set_cancellable (NautilusTagManager *self,
                                            TRACKER_NOTIFIER_FLAG_QUERY_LOCATION,
                                            cancellable,
                                            &self->notifier_error);
-
-    g_signal_connect (self->notifier,
-                      "events",
-                      G_CALLBACK (on_tracker_notifier_events),
-                      self);
+    if (self->notifier != NULL)
+    {
+        g_signal_connect (self->notifier,
+                          "events",
+                          G_CALLBACK (on_tracker_notifier_events),
+                          self);
+    }
 }
 
 static void
